Eevee Attribute Rendering Has Some Left Out Nodes Comparing with Cycles #93179

Closed
opened 2021-11-18 03:55:14 +01:00 by Zijun Zhou · 11 comments
Contributor

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-18 00:40, hash: ceec400975
Worked: none

Short description of error
It seems it's forgotten that Vertext Color node and UV Map node can also read generic attributes, at least Cycles reads it. The fact that Eevee doesn't should be considered a bug.
image.png

Exact steps for others to reproduce the error
Turn on Rendered View Shading on the Left Side Viewport and Comapre Cycles and Eevee Results.
Eevee Attribute Rendering Has Some Left Out Nodes Comparing with Cycles.blend

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.49 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-18 00:40, hash: `ceec400975` Worked: none **Short description of error** It seems it's forgotten that `Vertext Color` node and `UV Map` node can also read generic attributes, at least Cycles reads it. The fact that Eevee doesn't should be considered a bug. ![image.png](https://archive.blender.org/developer/F11821932/image.png) **Exact steps for others to reproduce the error** Turn on Rendered View Shading on the Left Side Viewport and Comapre Cycles and Eevee Results. [Eevee Attribute Rendering Has Some Left Out Nodes Comparing with Cycles.blend](https://archive.blender.org/developer/F11821939/Eevee_Attribute_Rendering_Has_Some_Left_Out_Nodes_Comparing_with_Cycles.blend)
Author
Contributor

Added subscriber: @Eary

Added subscriber: @Eary
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I can reproduce this issue on master.

For now, Issue can be fixed by using Attribute node instead of specific nodes.

Hi, thanks for the report. I can reproduce this issue on master. For now, Issue can be fixed by using `Attribute node` instead of specific nodes.

Added subscribers: @kevindietrich, @brecht

Added subscribers: @kevindietrich, @brecht
CC @kevindietrich.

Is this even a bug? The UV map (CD_MLOOPUV/CD_MTFACE) is being overwritten by a point attribute (with CD_PROP_FLOAT3 type here) so the attribute lookup fails as the UV Map node is requesting a CD_MTFACE (similarly for the vertex color). We could use CD_AUTO_FROM_NAME in the UV Map and Vertex Color nodes to avoid further complicating the attribute lookup logic in the render code, which will fix the issue. But overwriting such standard attributes in Blender is going to make exporters (like Alembic or USD) fail.

Cycles works here because it just requests the attribute by name, with no type constraint.

Is this even a bug? The UV map (`CD_MLOOPUV`/`CD_MTFACE`) is being overwritten by a point attribute (with `CD_PROP_FLOAT3` type here) so the attribute lookup fails as the UV Map node is requesting a `CD_MTFACE` (similarly for the vertex color). We could use `CD_AUTO_FROM_NAME` in the UV Map and Vertex Color nodes to avoid further complicating the attribute lookup logic in the render code, which will fix the issue. But overwriting such standard attributes in Blender is going to make exporters (like Alembic or USD) fail. Cycles works here because it just requests the attribute by name, with no type constraint.

It could be argued this is a bug in Cycles, though solving it there does not really make it easier for users to set up correct shaders for geometry nodes. As far as I can tell the downside of CD_AUTO_FROM_NAME would be cases where UV maps and vertex loops have the same name. Though Cycles also has that and I think we might as well make it consistent.

In #93179#1256385, @kevindietrich wrote:
We could use CD_AUTO_FROM_NAME in the UV Map and Vertex Color nodes to avoid further complicating the attribute lookup logic in the render code, which will fix the issue. But overwriting such standard attributes in Blender is going to make exporters (like Alembic or USD) fail.

It's not clear to me how Alembic and USD are related to this bug. Are you saying that changing the shader nodes would have some negative impact on them? Or that the fact that geometry nodes write to general attributes instead of UV maps and vertex colors is a problem independent of this, and that we should address that as the root cause instead or in addition to this?

If so, I think we should make the shading nodes consistent regardless. The geometry nodes team is aware of the interop issues between general attributes and UV maps and vertex colors, though I'm not sure if there is a concrete plan to tackle that.

It could be argued this is a bug in Cycles, though solving it there does not really make it easier for users to set up correct shaders for geometry nodes. As far as I can tell the downside of `CD_AUTO_FROM_NAME` would be cases where UV maps and vertex loops have the same name. Though Cycles also has that and I think we might as well make it consistent. > In #93179#1256385, @kevindietrich wrote: > We could use `CD_AUTO_FROM_NAME` in the UV Map and Vertex Color nodes to avoid further complicating the attribute lookup logic in the render code, which will fix the issue. But overwriting such standard attributes in Blender is going to make exporters (like Alembic or USD) fail. It's not clear to me how Alembic and USD are related to this bug. Are you saying that changing the shader nodes would have some negative impact on them? Or that the fact that geometry nodes write to general attributes instead of UV maps and vertex colors is a problem independent of this, and that we should address that as the root cause instead or in addition to this? If so, I think we should make the shading nodes consistent regardless. The geometry nodes team is aware of the interop issues between general attributes and UV maps and vertex colors, though I'm not sure if there is a concrete plan to tackle that.

In #93179#1258121, @brecht wrote:
It's not clear to me how Alembic and USD are related to this bug. Are you saying that changing the shader nodes would have some negative impact on them? Or that the fact that geometry nodes write to general attributes instead of UV maps and vertex colors is a problem independent of this, and that we should address that as the root cause instead or in addition to this?

I meant the latter, but I was thinking out loud mostly. My two statements were not meant to follow logically each other. I realized while looking into this that changing the UV maps type information with geometry nodes that exporting UV maps will fail in Alembic as it looks for a CD_MLOOPUV of the same name (CD_PROP_FLOAT2 could work, but even that is not well supported by geometry nodes currently).

> In #93179#1258121, @brecht wrote: > It's not clear to me how Alembic and USD are related to this bug. Are you saying that changing the shader nodes would have some negative impact on them? Or that the fact that geometry nodes write to general attributes instead of UV maps and vertex colors is a problem independent of this, and that we should address that as the root cause instead or in addition to this? I meant the latter, but I was thinking out loud mostly. My two statements were not meant to follow logically each other. I realized while looking into this that changing the UV maps type information with geometry nodes that exporting UV maps will fail in Alembic as it looks for a `CD_MLOOPUV` of the same name (`CD_PROP_FLOAT2` could work, but even that is not well supported by geometry nodes currently).

This issue was referenced by 281bcc1c1d

This issue was referenced by 281bcc1c1dd6b786bafa2712986885c44ed482a3

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-05-03 22:50:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93179
No description provided.